<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>patasmonkey_gazebo</name>
  <version>0.0.0</version>
  <description>GAZEBO simulation for patasmonkey UGV</description>
  <maintainer email="kazuho.kobayashi.ynu@gmail.com">mujin</maintainer>
  <license>MIT</license>


  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>patasmonkey_teleop</exec_depend>

  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
